--- a/app/assets/stylesheets/dashboard/dashboard.less
+++ b/app/assets/stylesheets/dashboard/dashboard.less
@@ -1,31 +1,4 @@
-@import "../variables.less";
-
-.box {
-    border: 1px dotted @redPlay;
-    background: url('/assets/images/commons/stripes.png');
-    color: @blackPlay;
-    text-align: center;
-
-    h3 {
-        border-bottom: grey solid 1px;
-        margin-top: 0;
-        margin-bottom: 5px;
-        text-transform: capitalize;
-    }
-
-    ul {
-        margin: 0;
-        li {
-            padding-right: 10px;
-            padding-left: 10px;
-            padding-top: 4px;
-            padding-bottom: 5px;
-            a {
-                color: @blueEmacs;
-            }
-        }
-    }
-}
+@import "../commons.less";
 
 .search {
     background: @greenPlay;
