--- a/app/views/playstory/dashboard/layout.scala.html
+++ b/app/views/playstory/dashboard/layout.scala.html
@@ -1,6 +1,6 @@
 @()
 
-<script id="layout_tmpl" type="text/html">
+<script id="dashboard_layout_tmpl" type="text/html">
   <section class="column-left"></section>
   <section class="column-middle"></section>
   <section class="column-right"></section>
