--- a/app/views/playstory/home/main.scala.html
+++ b/app/views/playstory/home/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, user: models.User)(content: Html)(css: Html)(scripts: Html)
+@(title: String)(content: Html)(css: Html)(scripts: Html)
 
 <!DOCTYPE html>
 
@@ -7,7 +7,7 @@
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <!-- CSS -->
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story/layout.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/layout.css")">
         @css
         <!-- Javascript libs -->
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/jquery-1.7.1.min.js")"></script>
@@ -20,7 +20,7 @@
         <div class="profil">
           <h1>Play Story</h1>
           <div class="signout">
-            <a href="#">@user.fullName</a>
+            <a href="#">Sébastien RENAULT</a>
           </div>
         </div>
         <div class="gap">
