--- a/app/assets/stylesheets/home/home.less
+++ b/app/assets/stylesheets/home/home.less
@@ -1,23 +1,25 @@
 @import "../commons.less";
 
-.column-left {
-    float: left;
-    padding: 10px;
-    margin-right: 10px;
+.home {
+    .column-left {
+        float: left;
+        padding: 10px;
+        margin-right: 10px;
 
-    .menu {
-        .box
+        .menu {
+            .box
+        }
     }
-}
 
-.column-middle {
-    float: left;
-    width: 90%;
-    padding: 10px;
+    .column-middle {
+        float: left;
+        width: 90%;
+        padding: 10px;
 
-    .content-middle {
-        min-height: 500px;
-        background: white;
-        padding: 15px;
+        .content-middle {
+            min-height: 500px;
+            background: white;
+            padding: 15px;
+        }
     }
 }
