--- a/app/views/playstory/home/overview.scala.html
+++ b/app/views/playstory/home/overview.scala.html
@@ -2,6 +2,6 @@
 
 <script id="overview_tmpl" type="text/html">
   <div class="content-middle overview">
-    <a href="#dashboard">DASHBOARD</a>
+    <a href="#dashboard" href="">DASHBOARD</a>
   </div>
 </script>
