Index page is now either signin or app

--- a/app/views/signin.scala.html
+++ b/app/views/signin.scala.html
@@ -17,7 +17,7 @@
 
       <section class="content">
         <div class="signin">
-          <a href="@controllers.routes.Application.signin">Sign in</a>
+          <a href="@controllers.routes.Application.openid">Sign in</a>
         </div>
       </section>
 
