wip to make feature working again ...

--- a/app/views/playstory/dashboard/feeds.scala.html
+++ b/app/views/playstory/dashboard/feeds.scala.html
@@ -3,7 +3,7 @@
 <script id="feeds_past_tmpl" type="text/html">
   <div class="feeds past">
     <div class="more-feeds">
-      <a href="#"><span class="counter"></span> more logs...</a>
+      <a href=""><span class="counter"></span> more logs...</a>
     </div>
     <ul class="feeds"></ul>
   </div>
@@ -37,10 +37,10 @@
         <% }); %>
       </ul>
       <div class="footer">
-        <a class="comment" href="#">Comment</a> |
-        <a class="share" href="#">Share</a> |
-        <a class="bookmark" href="#">Bookmark</a> |
-        <a class="related" href="#">Related</a>
+        <a class="comment" href="">Comment</a> |
+        <a class="share" href="">Share</a> |
+        <a class="bookmark" href="">Bookmark</a> |
+        <a class="related" href="">Related</a>
       </div>
   </li>
 </script>
@@ -72,7 +72,7 @@
     </div>
     <div class="body">
       <div class="header">
-        <a href="#" class="author"><%= author.firstname %> <%= author.lastname %></a>
+        <a href="" class="author"><%= author.firstname %> <%= author.lastname %></a>
       </div>
       <div class="message">
         <textarea placeholder="Write a comment..."></textarea>
@@ -89,7 +89,7 @@
     </div>
     <div class="body">
       <div class="header">
-        <a href="#" class="author"><%= author.firstname %> <%= author.lastname %></a>
+        <a href="" class="author"><%= author.firstname %> <%= author.lastname %></a>
       </div>
       <div class="message"><%= message %></div>
     </div>
