--- a/app/views/playstory/dashboard/layout.scala.html
+++ b/app/views/playstory/dashboard/layout.scala.html
@@ -1,7 +1,9 @@
 @()
 
 <script id="dashboard_layout_tmpl" type="text/html">
-  <section class="column-left"></section>
-  <section class="column-middle"></section>
-  <section class="column-right"></section>
+  <div class="page">
+    <section class="column-left"></section>
+    <section class="column-middle"></section>
+    <section class="column-right"></section>
+  </div>
 </script>
