--- a/app/assets/stylesheets/dashboard/dashboard.less
+++ b/app/assets/stylesheets/dashboard/dashboard.less
@@ -15,8 +15,8 @@
     }
 
     .page {
-        overflow: none;
-        width: 64%;
+        overflow: hidden;
+        width: 74%;
         margin: auto;
 
         .column-left {
