Repair some features like streaming ...

--- a/app/assets/stylesheets/dashboard/dashboard.less
+++ b/app/assets/stylesheets/dashboard/dashboard.less
@@ -16,7 +16,7 @@
 
     .page {
         overflow: hidden;
-        width: 74%;
+        width: 1005px;
         margin: auto;
 
         .column-left {
