--- a/app/views/playstory/dashboard/feeds.scala.html
+++ b/app/views/playstory/dashboard/feeds.scala.html
@@ -5,14 +5,14 @@
     <div class="more-feeds">
       <a href=""><span class="counter"></span> more logs...</a>
     </div>
-    <ul class="feeds"></ul>
+    <ul class="logs"></ul>
   </div>
 </script>
 
 <script id="feeds_present_tmpl" type="text/html">
   <div class="feeds present">
     <div class="waiting-feeds">Waiting feeds ...</div>
-    <ul>
+    <ul class="logs">
     </ul>
   </div>
 </script>
