--- a/app/views/playstory/dashboard/apps.scala.html
+++ b/app/views/playstory/dashboard/apps.scala.html
@@ -4,8 +4,9 @@
   <div class="apps">
     <h3>APPS</h3>
     <ul>
-      <li><a href="#">CREATE</a></li>
-      <li><a href="#">DISCOVER</a></li>
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#dashboard/past/all">CREATE</a></li>
+      <li><a href="#dashboard/past/all">DISCOVER</a></li>
       <li><hr/></li>
       <li class="project"><a href="#dashboard/past/all">ALL</a></li>
     </ul>
