--- a/app/views/playstory/home/discover.scala.html
+++ b/app/views/playstory/home/discover.scala.html
@@ -2,6 +2,6 @@
 
 <script id="discover_tmpl" type="text/html">
   <div class="content-middle discover">
-    Discover
+    [Discover]
   </div>
 </script>
