--- a/app/views/playstory/home/menu.scala.html
+++ b/app/views/playstory/home/menu.scala.html
@@ -3,9 +3,9 @@
 <script id="menu_tmpl" type="text/html">
   <div class="menu">
     <ul>
-      <li><a href="#overview">Overview</a></li>
-      <li><a href="#discover">Discover</a></li>
-      <li><a href="#profil">Profil</a></li>
+      <li><a href="#home">Overview</a></li>
+      <li><a href="#home/discover">Discover</a></li>
+      <li><a href="#home/profil">Profil</a></li>
     </ul>
   </div>
 </script>
