--- a/app/views/playstory/index.scala.html
+++ b/app/views/playstory/index.scala.html
@@ -34,6 +34,7 @@
   routes.javascript.Dashboard.withContext,
   routes.javascript.Dashboard.comment,
   routes.javascript.Dashboard.more,
+  routes.javascript.Dashboard.news,
   routes.javascript.Dashboard.inbox
 )
 
