wip overview View

--- a/app/views/playstory/home/menu.scala.html
+++ b/app/views/playstory/home/menu.scala.html
@@ -4,6 +4,7 @@
   <div class="menu">
     <ul>
       <li><a href="#home">Overview</a></li>
+      <li><a href="#dashboard/past/all">Dashboard</a></li>
       <li><a href="#home/discover">Discover</a></li>
       <li><a href="#home/profil">Profil</a></li>
     </ul>
