--- a/app/views/playstory/index.scala.html
+++ b/app/views/playstory/index.scala.html
@@ -26,6 +26,7 @@
 
 <!-- Play Javascript routers -->
 @javascriptRouter("PlayRoutes")(
+  routes.javascript.Home.summary,
   routes.javascript.Dashboard.listen,
   routes.javascript.Dashboard.last,
   routes.javascript.Dashboard.byLevel,
