--- a/app/views/playstory/main.scala.html
+++ b/app/views/playstory/main.scala.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/procrastination.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/http-jquery.procrastination.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/underscore-1.3.1.min.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/d3.v2.js")"></script>
     </head>
     <body>
       <header>
