--- a/app/assets/stylesheets/home/home.less
+++ b/app/assets/stylesheets/home/home.less
@@ -20,6 +20,14 @@
             min-height: 500px;
             background: white;
             padding: 15px;
+
+            &.overview {
+                .color {
+                    display: inline-block;
+                    height: 10px;
+                    width: 10px;
+                }
+            }
         }
     }
 }
