--- a/app/assets/stylesheets/home/home.less
+++ b/app/assets/stylesheets/home/home.less
@@ -22,10 +22,21 @@
             padding: 15px;
 
             &.overview {
-                .color {
-                    display: inline-block;
-                    height: 10px;
-                    width: 10px;
+                ul.legend {
+                    width: 100px;
+                    padding: 4px;
+                    border: 1px solid grey;
+
+                    li {
+                        font-size: 0.8em;
+                        padding: 4px;
+                        .color {
+                            display: inline-block;
+                            height: 10px;
+                            width: 10px;
+                            margin-right: 4px;
+                        }
+                    }
                 }
             }
         }
