--- a/app/views/playstory/home/discover.scala.html
+++ b/app/views/playstory/home/discover.scala.html
@@ -8,7 +8,7 @@
         <label for="name">Name</label>
         <input type="text" name="name" />
         <label for="name">Real name</label>
-        <input type="text" name="realName" />
+        <input type="text" name="real_name" />
         <button>Create</button>
       </form>
     </fieldset>
