--- a/app/views/playstory/index.scala.html
+++ b/app/views/playstory/index.scala.html
@@ -27,6 +27,7 @@
 <!-- Play Javascript routers -->
 @javascriptRouter("PlayRoutes")(
   routes.javascript.Home.summary,
+  routes.javascript.Home.createProject,
   routes.javascript.Home.allProjects,
   routes.javascript.Dashboard.listen,
   routes.javascript.Dashboard.last,
