--- a/app/views/playstory/index.scala.html
+++ b/app/views/playstory/index.scala.html
@@ -29,6 +29,8 @@
   routes.javascript.Home.summary,
   routes.javascript.Home.createProject,
   routes.javascript.Home.allProjects,
+  routes.javascript.Home.follow,
+  routes.javascript.Home.unfollow,
   routes.javascript.Dashboard.listen,
   routes.javascript.Dashboard.last,
   routes.javascript.Dashboard.byLevel,
