--- a/app/views/playstory/dashboard/apps.scala.html
+++ b/app/views/playstory/dashboard/apps.scala.html
@@ -5,8 +5,7 @@
     <h3>APPS</h3>
     <ul>
       <li><a href="#home">HOME</a></li>
-      <li><a href="#dashboard/past/all">CREATE</a></li>
-      <li><a href="#dashboard/past/all">DISCOVER</a></li>
+      <li><a href="#home/discover">DISCOVER</a></li>
       <li><hr/></li>
       <li class="project"><a href="#dashboard/past/all">ALL</a></li>
     </ul>
