--- a/app/views/playstory/home/discover.scala.html
+++ b/app/views/playstory/home/discover.scala.html
@@ -16,9 +16,6 @@
 </script>
 
 <script id="discover_project_tmpl" type="text/html">
-  <%
-  %>
-
   <fieldset>
     <legend>Projects</legend>
     <ul class="projects">
@@ -27,19 +24,9 @@
           <%= project.name %>
           -
           <% if (project.isFollowed) { %>
-            <a href='#'
-              data-follow-project='<%= project.name %>'
-              data-follow-action='unfollow'
-              class='follow-link'>
-              Unfollow
-            </a>
+            <a href='#' data-follow-project='<%= project.name %>'  data-follow-action='unfollow' class='follow-link'>Unfollow </a>
           <% } else { %>
-            <a href='#'
-              data-follow-project='<%= project.name %>'
-              data-follow-action='follow'
-              class='follow-link'>
-              Follow
-            </a>
+            <a href='#' data-follow-project='<%= project.name %>' data-follow-action='follow' class='follow-link'> Follow </a>
           <% } %>
         </li>
       <% }); %>
