--- a/app/views/playstory/home/discover.scala.html
+++ b/app/views/playstory/home/discover.scala.html
@@ -24,12 +24,19 @@
           <%= project.name %>
           -
           <% if (project.isFollowed) { %>
-            <a href='#' data-follow-project='<%= project.name %>'  data-follow-action='unfollow' class='follow-link'>Unfollow </a>
+            <a href='#' data-follow-project='<%= project.name %>' data-follow-action='unfollow' class='follow-link'>Unfollow</a>
           <% } else { %>
-            <a href='#' data-follow-project='<%= project.name %>' data-follow-action='follow' class='follow-link'> Follow </a>
+            <a href='#' data-follow-project='<%= project.name %>' data-follow-action='follow' class='follow-link'>Follow</a>
           <% } %>
         </li>
       <% }); %>
     </ul>
   </fieldset>
+</script>
+
+<script id="discover_add_project_tmpl" type="text/html">
+  <li>
+    <%= project.name %>
+    <a href='#' data-follow-project='<%= project.name %>' data-follow-action='follow' class='follow-link'>Follow</a>
+  </li>
 </script>
